# ZIP-FIT

./: .gitignore  .gitmodules  CLAUDE.md  PyPantograph  README.md  bm-ZIP-FIT.code-workspace  compel-zipfit.code-workspace  consolidate_jsonl_to_orig_repo.py  example.py  example2.py  final_verification.py  fix_readme_files.py  main_python_2_lean4.py  push_proofnet_minif2f_to_brando.py  pyproject.toml  setup.py  update_readme.py  verify_readme_files.py
data/: Putnam_AXIOM_Original_v3.json  README.md  add_nl_stmt.py  minif2f_test.jsonl  minif2f_valid.jsonl  proofnet.jsonl  proofnet_lean4_v2.jsonl  push_fixed_proofnet_lean4.py  push_hf_proofnet.py  push_leandojo_lean4_corpus.py  push_leandojo_lean4_splits.py  push_minif2f.py  push_putnam_axiom_to_zipfit.py  push_readme_to_zipfit.py  push_to_huggingface.py  push_updated_readme_to_zipfit.py  putnam_axiom_readme_for_zipfit.md  upload_putnam.py
data/Putnam_axiom_Variations_v4/: original.json  test.json
data/old/: _minif2f_valid_few_shot.jsonl  proofnet.jsonl  split_and_push.py
data/split_data/minif2f/: test.jsonl  valid.jsonl
data/split_data/proofnet/: test.jsonl  valid.jsonl
experiments/: cursor.md  load_gemma2_2b_vllm.py  pantograph_imports.py
experiments/00_model_tokenizers/: tfce_pg.py
experiments/01_create_math_select/: check_jsonl.py  create_combined_math_dataset.py  inspect_datasets.py  test_loading_of_math_select_and_eval_datasets.py  verify_combined_dataset.py  verify_format_and_export_jsonl.py
experiments/01_dmlr_submission/: README.md  fetch_attempts.md  openreview_checklist.md  plan.md  qa_report.md
experiments/01_dmlr_submission/or_reviews/: REVIEWS_ANALYSIS.md  or_zipfit_code_iclr2026.json  or_zipfit_iclr2025.json
experiments/01_nl_math/: main_create_nl_math_src_datset.sh
experiments/02_compel_dmlr_staging/: README.md
experiments/02_compel_dmlr_staging/DMLR_2026_Compel/: 00_dmlr_compel.bbl  00_dmlr_compel.tex  01_introduction.tex  02_related_work.tex  03_cr_signal.tex  04_theory.tex  05_method.tex  06_experiments.tex  07_results.tex  08_qualitative.tex  09_discussion.tex  10_conclusion.tex  compel_refs.bib
experiments/02_compel_dmlr_staging/submission_docs/: README.md  fetch_attempts.md  openreview_checklist.md  plan.md  qa_report.md
experiments/02_train_math_select/: main_train_model.sh
experiments/03_tmlr_submission/: README.md  cowork_submission_prompt.md  decision_submission.md  qa_report.md  tmlr_checklist.md
experiments/03_train_eval_lean4/: main_train_eval_lean4.sh
experiments/04_sanity_check_tfa/: main_sanity_check_tfa.sh
experiments/05_sanity_check_tfce_log_likelihood_gold_ref/: main_sanity_check_tfce_log_likelihood_gold_ref.sh
experiments/06_lm_harness_evals/: _main_putnam_axiom_eval.sh  main_putnam_axiom_zipfit_eval.sh
experiments/06_lm_harness_evals/fixing_putnam_lm_harness/: check_filtering.py  test_zipfit_splits.sh
experiments/AF/: ft.py  to_hub_dsir.py
experiments/playground/: ft_and_eval.py  pantograph_imports.py
experiments/playground/AF/: ft.py  get_data.py  to_hub.py
experiments/playground/old/: data.py  ft_and_eval2.py  simple_train.py  upload_gemma_model.py
experiments/rebuttals/zipfit/: ft_and_eval.py
paper_latex/: .gitignore
paper_latex/DMLR_2026_ZipFit/: 00_dmlr_zipfit.bbl  00_dmlr_zipfit.tex  06_misalignment.tex  iclr2025_conference.bib  math_commands.tex
paper_latex/TMLR_2026_ZipFit/: 00_tmlr_zipfit.bbl  00_tmlr_zipfit.tex  01_abstract.tex  02_introduction.tex  03_zip_fit.tex  04_interventional.tex  05_efficient.tex  06_misalignment.tex  07_conclusion.tex  99_appendix.tex  references_rylan.bib
playground/00_model_tokenizers/: af_tokenizers.py
src/zip_fit/: __init__.py  lean4_utils.py  utils.py  zipfit.py
src/zip_fit/data_src/: create_nl_math_src_dataset.py  create_putnam_axiom_splits_and_push.py
src/zip_fit/eval/: eval_ce.py
zip_fit/: __init__.py  __lean_pass_k_unbiased.py  _tfa.py  _tfa2_fully_vectorized.py  eval_ce.py  lean4_utils.py  lean_pass_k.py  lean_pass_k_unbiased.py  readme.md  tfa.py  tfa2.py  tfce.py  utils.py  zipfit.py
zip_fit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
zip_fit/eval/: eval_ce.py  eval_compile_pass_k_unbiased.py
zip_fit/main/: main_eval_pass_at_k_af.py
zip_fit/metrics/: lean4_comp_pass_at_k.py  tfa.py  tfce.py
zip_fit/old/: _lean_pass_k.py  _lean_pass_k_unbiased.py  _pass_k_unbiased.py  _simple_train.py  simple_train.py
zip_fit/train/: _simple_train.py  callbacks.py  tfa_callback.py  train.py
zip_fit/zip_fit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+50 files in other folders)
