[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zip_fit"
version = "1.0.8"
authors = [
  { name = "Elyas Obbad", email = "eobbad@stanford.edu" },
]
description = "Data Selection via Compression-Based Alignment"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["data selection", "compression", "zip-fit", "nlp", "language models", "zip_fit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0",
    "lz4>=3.1.10",
    "datasets>=1.17.0",
    "networkx>=2.5",
    "scipy",
    "scikit-learn",
    "pandas",
    "requests",
    "aiohttp",
    "matplotlib",
    "fire",
    "Levenshtein",
    "seaborn",
    "wandb",
    "twine",
    "nvidia-htop",
    "protobuf",
    "torch",
    "torchvision",
    "trl",
    "transformers",
    "accelerate>=0.26.0",
    "peft",
    "bitsandbytes",
    "einops",
    "sentencepiece",
    "brotli",
    "lm_eval[vllm]",
    "vllm==0.6.4.post1",
    "antlr4-python3-runtime==4.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8>=3.9",
    "black>=21.0",
    "mypy>=0.910",
]

# choosing src idiom over flat packaging: https://chatgpt.com/share/67f6f53e-3258-8001-a46b-2152ea437ab7
[tool.setuptools]
package-dir = {"" = "src"}  # Maps top-level package names to the 'src/' directory (e.g., 'zip_fit' → 'src/zip_fit')

[tool.setuptools.packages.find]
where = ["src"]  # Limit package discovery to the 'src/' directory
include = ["zip_fit*"]  # Include the 'zip_fit' package and any of its subpackages
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]  # Exclude test-related packages from distribution
